Bug 116975 - Laggy behavior when clicking between table cells in impress
Summary: Laggy behavior when clicking between table cells in impress
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2.7.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: notBibisectable, regression
Depends on:
Blocks: ImpressDraw-Tables Performance CPU-AT-100%
  Show dependency treegraph
 
Reported: 2018-04-12 15:29 UTC by Telesto
Modified: 2025-11-24 10:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-04-12 15:29:47 UTC
Description:
Laggy behavior when clicking table cells in impress

Steps to Reproduce:
1. Open the attached file (attachment 141151 [details])
2. Place the cursor somewhere in the yellow text box 
3. Switch back and forward between the yellow and green textbox -> (notice the text redrawing & slowness & burning CPU)

Actual Results:  
CPU usage is spiking; redrawing slow redrawing of the text

Expected Results:
Responsive; non laggy and no CPU burn


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.1.0.0.alpha0+
Build ID: 84e2614a75a615d6c8584b13a69b3368d2a12a3d
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-04-12_09:11:38
Locale: nl-NL (nl_NL); Calc: CL

not in
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL



User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Xisco Faulí 2018-04-12 17:10:32 UTC
Seems to be win only

I can reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: 751191ed2d7d6af6eddc3d738e8c45b0a2ab2572
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-03-21_23:24:05
Locale: es-ES (es_ES); Calc: group

but not in

Version: 6.1.0.0.alpha0+
Build ID: 24a57e2b854a1b8b3b8533ac72a6614ee29e374a
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 2 Chavdar 2018-04-19 12:17:46 UTC
No issue found!

Tested on:
Version: 6.0.3.2
Build ID: 8f48d515416608e3a835360314dac7e47fd0b821
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group

Linux Mint 18.3 Cinnamon 64
Comment 3 Buovjaga 2018-05-22 18:09:54 UTC
In 4.4.7.2 on Win it is already laggy and CPU fans start making noise. Thus I will not attempt a bibisect.
Comment 4 Telesto 2018-06-04 16:48:31 UTC
(In reply to Buovjaga from comment #3)
> In 4.4.7.2 on Win it is already laggy and CPU fans start making noise. Thus
> I will not attempt a bibisect.

No repro with
Version: 5.0.0.0.alpha1+
Build ID: ab465b90f6c6da5595393a0ba73f33a1e71a2b65
Locale: nl-NL (nl_NL)
Comment 5 Aron Budea 2018-06-05 10:34:06 UTC
I can see it's laggier than it used to be in general, but I'm having a hard time bibisecting it, the colors and slight layout changes make the steps difficult to evaluate. Let's mark it notBibisectable.
Comment 6 QA Administrators 2021-01-08 04:18:37 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2023-01-09 03:20:57 UTC Comment hidden (obsolete)
Comment 8 Commit Notification 2025-09-30 16:23:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e6a8c40e5051363d5825bd09131b86cf8a2b659b

tdf#116975 Laggy behavior when clicking between table cells in impress

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.