tdf#116975 Laggy behavior when clicking between table cells in impress

Only compute the object range when we actually need it.
Takes the hit test processing completely off the performance profile,
reducing CPU usage by 50%

Change-Id: I3bc7efa187897274d6ef86e7b259b0dba40dc398
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191667
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>